# nlplib

./: .coveragerc  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
nlplib/modules/: __init__.py  film.py  rnn.py
nlplib/nlp/: metric.py  vocab.py
nlplib/utils/: logger.py  vocab.py
tests/utils/: test_metric.py  test_vocab.py
