[tool.poetry]
name = "nlplib"
version = "0.1.0"
description = ""
authors = ["takatoy <takatoy@nii.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
torch = "==1.2.0"
nltk = "^3.4.5"
loguru = "^0.4.0"
pre-commit = "^1.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
black = "^19.10b0"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
